# works

./: README.md
Assembly_x86_works/: README.md  data.txt  file_mng.asm  float2.asm  lseek_file.asm  my_func.asm  test.c
Assembly_x86_works/load_OS/: Makefile
Assembly_x86_works/load_OS/src/bootloader/: boot.asm  tmp_boot2.asm
Assembly_x86_works/load_OS/src/kernel/: main.asm
Assembly_x86_works/snake_game/: Makefile  snake.asm  term  term.asm  test_term  test_term.c
Bit_tricks/: CMakeLists.txt  main.cpp
Bit_tricks/LC_test/: CMakeLists.txt  Lc_questions.cpp  Lc_questions.h  Solution.h
Bit_tricks/tricks/: All_tricks.cpp  All_tricks.h  CMakeLists.txt
Boost_funcs/: CMakeLists.txt  main.cpp
DataStructure_algorithm_implemented/: .clang-format  CMakeLists.txt  README.md  main.cpp
DataStructure_algorithm_implemented/graph/: CMakeLists.txt  Shortest_path.cpp  Shortest_path.h  UnionFind.cpp  UnionFind.h
DataStructure_algorithm_implemented/list/: CMakeLists.txt  My_list.c  My_list.h  list_insertion_sort.h  list_msort.h  list_qsort.h  single_linked_list.c  single_linked_list.h  sort_test.c  sort_test.h  t_list.c  t_list.h  t_util.h
DataStructure_algorithm_implemented/math/: CMakeLists.txt  MathFuncs.cpp  MathFuncs.h
DataStructure_algorithm_implemented/sorting/: CMakeLists.txt  Sortings.cpp  Sortings.h
DataStructure_algorithm_implemented/test/: CMakeLists.txt  Graph_test.cpp  Trees_test.cpp
DataStructure_algorithm_implemented/trees/: CMakeLists.txt  Trie.cpp  Trie.h
Leetcodes/: README.md
Leetcodes/arr_and_string/: q_12.cpp  q_14.cpp  q_167.cpp  q_54.cpp  q_6.cpp  q_8.cpp
Leetcodes/array/: q_2419.cpp  q_311.cpp
Leetcodes/backtracking/: q_131.cpp  q_140.cpp  q_216.cpp  q_22.cpp  q_294.cpp  q_301.cpp  q_351.cpp  q_39.cpp  q_40.cpp  q_46.cpp  q_465.cpp  q_47.cpp  q_473.cpp  q_488.cpp  q_78.cpp  q_93.cpp
Leetcodes/bfs_dfs/: q_126.cpp  q_127.cpp  q_329.cpp  q_472.cpp  q_490.cpp
Leetcodes/binary_search/: q_1011.cpp  q_1198.cpp  q_1231.cpp  q_1283.cpp  q_1498.cpp  q_153.cpp  q_1539.cpp  q_154.cpp  q_162.cpp  q_2064.cpp  q_222.cpp  q_2529.cpp  q_270.cpp  q_275.cpp  q_278.cpp  q_302.cpp  q_33.cpp  q_34.cpp  q_35.cpp  q_4.cpp  q_436.cpp  q_441.cpp  q_483.cpp  q_57.cpp  q_611.cpp  q_69.cpp  q_74.cpp  q_774.cpp  q_81.cpp  q_875.cpp
Leetcodes/binary_tree/: q_101.cpp  q_103.cpp  q_104.cpp  q_105.cpp  q_106.cpp  q_112.cpp  q_117.cpp  q_156.cpp  q_199.cpp  q_236.cpp  q_297.cpp  q_314.cpp  q_404.cpp
Leetcodes/bit_manipulation/: q_260.cpp  q_29.cpp  q_338.cpp  q_411.cpp
Leetcodes/bit_manipulation_n_mask/: q_89.cpp
Leetcodes/bst/: q_109.cpp  q_230.cpp  q_255.cpp  q_270.cpp  q_285.cpp  q_333.cpp  q_426.cpp  q_449.cpp
Leetcodes/combinatorics/: q_3405.cpp
Leetcodes/counting/: q_387.cpp
Leetcodes/design/: q_297.cpp  q_355.cpp  q_385.cpp  q_460.cpp
Leetcodes/divide_n_conquer/: q_23.cpp
Leetcodes/dynamic_programming/: q_10.cpp  q_1027.cpp  q_1066.cpp  q_115.cpp  q_118.cpp  q_120.cpp  q_121.cpp  q_1218.cpp  q_122.cpp  q_123.cpp  q_124.cpp  q_1312.cpp  q_132.cpp  q_139.cpp  q_152.cpp  q_188.cpp  q_1964.cpp  q_198.cpp  q_213.cpp  q_2140.cpp  q_221.cpp  q_233.cpp  q_241.cpp  q_265.cpp  q_300.cpp  q_309.cpp  q_312.cpp  q_313.cpp  q_32.cpp  q_322.cpp  q_337.cpp  q_343.cpp  q_354.cpp  q_361.cpp  q_368.cpp  q_375.cpp  q_376.cpp  q_377.cpp  q_396.cpp  q_397.cpp  (+27 more)
Leetcodes/follow_requirement/: q_65.cpp  q_68.cpp
Leetcodes/graph/: q_207.cpp  q_2204.cpp  q_269.cpp  q_332.cpp  q_417.cpp  q_490.cpp  q_499.cpp  q_802.cpp
Leetcodes/greedy/: q_134.cpp  q_135.cpp
Leetcodes/hash_map_set/: q_1.cpp  q_1133.cpp  q_1233.cpp  q_128.cpp  q_266.cpp  q_36.cpp  q_391.cpp  q_398.cpp  q_49.cpp
Leetcodes/linked_list/: q_138.cpp  q_141.cpp  q_2.cpp  q_203.cpp  q_206.cpp  q_21.cpp  q_237.cpp  q_25.cpp  q_328.cpp  q_369.cpp  q_430.cpp  q_445.cpp
Leetcodes/math/: q_357.cpp  q_382.cpp  q_398.cpp  q_400.cpp  q_43.cpp  q_458.cpp  q_483.cpp  q_50.cpp  q_60.cpp  q_9.cpp
Leetcodes/matrix/: q_419.cpp  q_59.cpp
Leetcodes/priority_queue/: q_3066.cpp
Leetcodes/queue_stack/: q_20.cpp  q_394.cpp  q_456.cpp  q_71.cpp  q_84.cpp
Leetcodes/recursion/: q_100.cpp  q_118.cpp  q_119.cpp  q_17.cpp  q_21.cpp  q_22.cpp  q_24.cpp  q_339.cpp  q_364.cpp  q_37.cpp  q_426.cpp  q_50.cpp  q_51.cpp  q_52.cpp  q_77.cpp  q_98.cpp
Leetcodes/sliding_window/: q_1100.cpp  q_209.cpp  q_2444.cpp  q_3306.cpp  q_413.cpp  q_487.cpp
Leetcodes/sort/: q_274.cpp  q_324.cpp
Leetcodes/tree/: q_315.cpp  q_327.cpp  q_493.cpp
Leetcodes/trie/: q_208.cpp  q_211.cpp  q_212.cpp  q_336.cpp  q_386.cpp  q_421.cpp  q_425.cpp
Leetcodes/two_pointer/: q_142.cpp  q_148.cpp  q_170.cpp  q_18.cpp  q_19.cpp  q_234.cpp  q_259.cpp  q_3403.cpp  q_61.cpp  q_75.cpp  q_82.cpp  q_86.cpp
Leetcodes/union_find/: q_130.cpp  q_200.cpp  q_261.cpp  q_305.cpp  q_323.cpp  q_399.cpp  q_547.cpp
Multi_threads/: CMakeLists.txt  main.cpp
Multi_threads/ch3/: CMakeLists.txt  Cache_data.h  Conn_works.h  Threadsafe_stack.h  Unique_lock_swap.h
Multi_threads/ch4/: Async_n_Future.h  CMakeLists.txt  Latch_example.h  Packaged_task_n_Promise.h  Threadsafe_queue.h
OS_from_scratch/: Makefile  README.md
OS_from_scratch/little_os/: kmain.c  link.ld  loader.s  makefile  stdint.h  video.c  video.h
OS_from_scratch/little_os/iso_files/boot/grub/: grub.cfg
OS_from_scratch/src/: main.asm
Opencv_apps/: CMakeLists.txt  main.cpp
SDL2_games/: CMakeLists.txt  main.cpp
SDL2_games/snake_game/: CMakeLists.txt  Snake.cpp  Snake.h  Snake_Food.cpp  Snake_Food.h  Snake_game_func.cpp  Snake_game_func.h
